--- a/.github/workflows/build-test-package-python-cuda.yml
+++ b/.github/workflows/build-test-package-python-cuda.yml
@@ -225,7 +225,10 @@ jobs:
       run: |
         # Find the CUDA 124 wheel for Python 3.11 dynamically
         wheel=$(find wheels -name "*cuda124*cp311*manylinux_2_28_x86_64.whl" -type f | head -1)
-        pip uninstall -y $(pip freeze | sed -E 's/(==.*|[[:space:]]+@.*)$//' | grep -E '^itk-') || true
+        installed_pkg=$(pip freeze | sed -E 's/(==.*|[[:space:]]+@.*)$//' | grep -E '^itk-')
+        if test ${#installed_pkg} -gt 0 ; then
+            pip uninstall -y $installed_pkg
+        fi
         echo "Installing wheel: $wheel"
         pip install $wheel
 
